--- a/demo/painless-state-mgmt/index.html
+++ b/demo/painless-state-mgmt/index.html
@@ -1,56 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Data and Kitties</title>
+	<title>DataCats</title>
 	<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
 	 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 	 <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
 	 <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script>
 	 <script src="./painless.js"></script>
+	 <style type="text/css">
+	 	body{ padding-top: 50px; }
+	 </style>
 </head>
 <body>
-	<div class="container">
-		<div id="app">
+	<div id="app">
 
-			<div class="navbar navbar-static-top">
-			  <div class="navbar-inner">
-			    <a class="brand" href="#">DataCats</a>
-			    <ul class="nav">
-					<li data-view="data"><a href="#data">Data</a> </li>
-					<li data-view="kitties"><a href="#kitties">Kitties</a></li>
-			    </ul>
-			  </div>
-			</div>
-		
-			<div id="views"></div>
-		
+		<div class="navbar navbar-fixed-top">
+		  <div class="navbar-inner">
+		    <a class="brand" href="#">DataCats</a>
+		    <ul class="nav">
+				<li data-view="data"><a href="#data">Data+Cats</a> </li>
+				<li data-view="kitties"><a href="#kitties">Kitties Only</a></li>
+		    </ul>
+		  </div>
 		</div>
+	
+		<div id="views" class="container"></div>
+	
 	</div>
 
 
 	<script type="template" id="dataform">
-		<form>
-			<div>
-				Name: <input value="Change Me">
+		<form class="form-horizontal">
+			<div class="control-group">
+				<label class="control-label">Name</label> 
+				<input value="Change Me">
 			</div>			
-			<div>
-			Fruit: <select>
+			<div class="control-group">
+			<label class="control-label">Fruit</label>
+			<select>
 					<option>Apples</option>
 					<option>Oranges</option>
 					<option>Bananas</option>
 					</select>
 			</div>
-			<div>
-				<textarea>Go ahead and edit this text.)</textarea>
+			<div class="control-group">
+				<label class="control-label">Message</label>
+				<textarea>Go ahead and edit this text.</textarea>
 			</div>
-
-			<button data-kitty class="btn btn-primary">Meow</button>
 		</form>
+		<button data-kitty class="btn btn-primary">Meow!</button>
+		<ul class="thumbnails"></ul>
 	</script>
 
 	<script type="template" id="kitties">
-		<button data-kitty class="btn btn-primary">Meow</button>
-		<ul class="thumbnails"></ul>
+		<div>
+			<div class="btn-group">
+				<button data-kitty class="btn btn-primary">Meow!</button>
+			</div>
+			<ul class="thumbnails"></ul>
+		</div>
 	</script>
 
 
